@@ -70,6 +70,8 @@ function &wfGetCache( $inputType ) {
 				$wgCaches[CACHE_ACCEL] = new eAccelBagOStuff;
 			} elseif ( function_exists( 'apc_fetch') ) {
 				$wgCaches[CACHE_ACCEL] = new APCBagOStuff;
+			} elseif( function_exists( 'xcache_get' ) ) {
+				$wgCaches[CACHE_ACCEL] = new XCacheBagOStuff();
 			} elseif ( function_exists( 'mmcache_get' ) ) {
 				$wgCaches[CACHE_ACCEL] = new TurckBagOStuff;
 			} else {
